fix: Fix the gap without colors
  - Caused by margins in <hr>
  - Fixed by removing <hr> and using border-top property

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -59,8 +59,7 @@ footer .navigation .mobile {
   display: initial;
 }
 
-header,
-footer {
+header {
   padding: 0.5em;
 }
 
@@ -71,6 +70,8 @@ footer .container {
 
 footer .container {
   justify-content: space-between;
+  border-top: 1px solid;
+  border-color: #E7E7E7;
 }
 
 header .container {
